// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Modal /> does not render at first and then render 1`] = `
<body>
  <div />
</body>
`;

exports[`<Modal /> does not render at first and then render 2`] = `
<body>
  <div
    aria-hidden="true"
  />
  .c0 {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: rgba(0,0,0,0.5);
  overflow: auto;
}

.c1 {
  position: relative;
  margin: 10vh auto;
  padding: 2rem;
  width: 50vw;
  max-height: calc(100vh - 2 * 10vh);
  background: white;
  border-radius: 0.25rem;
  outline: none;
  overflow-y: auto;
}

.c2 {
  position: absolute;
  top: 0;
  right: 0;
  padding: 0.625rem;
  color: #8393a7;
  line-height: 0;
  background: transparent;
  border: none;
  -webkit-appearance: none;
  cursor: pointer;
}

@media (max-width:1200px) {
  .c1 {
    width: 60vw;
  }
}

@media (max-width:980px) {
  .c1 {
    width: 80vw;
  }
}

@media (max-width:600px) {
  .c1 {
    margin: 1rem;
    max-height: calc(100vh - 2 * 1rem);
    width: calc(100% - 2 * 1rem);
  }
}

@media (max-width:600px) {
  .c2 {
    position: fixed;
    top: 0.625rem;
    right: 0.625rem;
  }
}

<reach-portal>
    <div
      class="c0"
      data-reach-dialog-overlay="true"
    >
      <div
        aria-modal="true"
        class="c1"
        data-reach-dialog-content="true"
        tabindex="-1"
      >
        Some content
        <button
          class="c2"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            title="fermer la modale"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="18"
              x2="6"
              y1="6"
              y2="18"
            />
            <line
              x1="6"
              x2="18"
              y1="6"
              y2="18"
            />
          </svg>
        </button>
      </div>
    </div>
  </reach-portal>
</body>
`;

exports[`<Modal /> renders the provided wrapper 1`] = `
<body>
  <div
    aria-hidden="true"
  />
  .c0 {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: rgba(0,0,0,0.5);
  overflow: auto;
}

.c2 {
  position: absolute;
  top: 0;
  right: 0;
  padding: 0.625rem;
  color: #8393a7;
  line-height: 0;
  background: transparent;
  border: none;
  -webkit-appearance: none;
  cursor: pointer;
}

.c1 {
  background-color: red;
}

@media (max-width:600px) {
  .c2 {
    position: fixed;
    top: 0.625rem;
    right: 0.625rem;
  }
}

<reach-portal>
    <div
      class="c0"
      data-reach-dialog-overlay="true"
    >
      <span
        class="c1"
      >
        This won't be displayed
        <button
          class="c2"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            title="fermer la modale"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="18"
              x2="6"
              y1="6"
              y2="18"
            />
            <line
              x1="6"
              x2="18"
              y1="6"
              y2="18"
            />
          </svg>
        </button>
      </span>
    </div>
  </reach-portal>
</body>
`;
